# VUT-PRL

./: CMakeLists.txt
task1/: Makefile  pms.cpp
task2/: life.cpp  test.sh
